--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "author": {
     "name": "Ross Khanas",
-    "email": "rk@try.cards"
+    "email": "rk@andcards.com"
   },
   "license": "MIT",
   "repository": {
