--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "description": "Translations for Cards services.",
   "keywords": [
-    "translations",
+    "andCards",
     "cards",
+    "translations",
     "services"
   ],
   "author": {
@@ -14,6 +15,6 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:opensource-cards/translations.git"
+    "url": "git@github.com:andcards/translations.git"
   }
 }
